--- a/app/employer/templates/company.html
+++ b/app/employer/templates/company.html
@@ -16,8 +16,8 @@
 </td>
 </tr>
 </table>
-<h4><a href="{{ url_for('company_edit_profile', company_name=company_name)}}">Edit Profile</a></h4>
-<h4><a href="{{ url_for('new_job_posting', company_name=company_name)}}">Post a new job listing</a></h4>
+<h4><a href="{{ url_for('employer.company_edit_profile', company_name=company_name)}}">Edit Profile</a></h4>
+<h4><a href="{{ url_for('employer.new_job_posting', company_name=company_name)}}">Post a new job listing</a></h4>
 {% if is_admin %}
 <h2> Company Dashboard </h2><hr>
 <h3> Pending jobs </h3><hr>
@@ -40,7 +40,7 @@
           {% if job.equity_job %}
           <p><b>Offering equity compensation</b></p>
           {% endif %}
-          <p><a href="{{ url_for('edit_job_details', company_name=company_name, job_name=job.name)}}">edit job</a></p>
+          <p><a href="{{ url_for('employer.edit_job_details', company_name=company_name, job_name=job.name)}}">edit job</a></p>
           <hr>
 {% endfor %}
 
