--- a/app/errors/templates/500.html
+++ b/app/errors/templates/500.html
@@ -7,7 +7,7 @@
   </div>
   <div class="row"><br></div>
   <div class="row">
-<p><a href="{{ url_for('index')}}">Go back</a></p>
+<p><a href="{{ url_for('main.index')}}">Go back</a></p>
   </div>
 </div>
 {% endblock %}
