--- a/app/main/templates/index.html
+++ b/app/main/templates/index.html
@@ -1,47 +1,207 @@
 {% extends "base.html" %}
 {% block content %}
-{% if current_user.is_authenticated %}
-{% if current_user.admin() %}
-<div class="container">
-  <div class="row"><br></div>
-  <div class="container">
-  <div class="row"><h3>Admin Privelages</h3></div>
-  </div>
-<div class="row"><br></div>
-<ul class="list-group">
-<a href="{{ url_for('admin.company_info') }}" class="list-group-item list-group-item-action">Company information</a>
-<a href="{{ url_for('admin.freelancer_info') }}" class="list-group-item list-group-item-action">Freelancer information</a>
-<a href="{{ url_for('auth.logout') }}" class="list-group-item list-group-item-action">Logout</a>
-</ul>
-</div>
-{% endif %}
-{% endif %}
+<!--Custom stylesheet from Bootstrap snippets-->
+<link href="{{ url_for('static', filename='css/landing-page.min.css')}}" rel="stylesheet">
+<!-- Custom stylesheets outsourced -->
+<link href="{{ url_for('static', filename='vendor/fontawesome-free/css/all.min.css')}}" rel="stylesheet" type="text/css">
+<link href="{{ url_for('static', filename='vendor/simple-line-icons/css/simple-line-icons.css')}}" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
+  <header class="masthead text-white text-center">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-9 mx-auto">
+          <h1 class="mb-5">Welcome to freeline, the world's only work-for-equity platform.
+          </h1>
+          <h1 class="mb-5">Earn your share now by signing up below</h1>
+        </div>
+        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+          <form>
+            <div class="form-row">
+              <div class="col-12 col-md-9 mb-2 mb-md-0">
+                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
+              </div>
+              <div class="col-12 col-md-3">
+                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+</header>
+
+  <!-- Icons Grid -->
+  <section class="features-icons bg-light text-center">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-screen-desktop m-auto text-primary"></i>
+            </div>
+            <h3>Find a Project</h3>
+            <p class="lead mb-0">Look through our list of projects for freelancers</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-wallet m-auto text-primary"></i>
+            </div>
+            <h3>Cash or Equity?</h3>
+            <p class="lead mb-0">Negotiate payment in the form of cash or equity.</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-rocket m-auto text-primary"></i>
+            </div>
+            <h3>Get to work!</h3>
+            <p class="lead mb-0">Get started on getting partial ownership in the next big startup!</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Image Showcases -->
+  <section class="showcase">
+    <div class="container-fluid p-0">
+      <div class="row no-gutters">
+
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image:url('static/img/header-photo.jpg');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h2>Get paid with cash, equity, or both.</h2>
+          <p class="lead mb-0">The world's only work-for-equity site: as a freelancer you get the opportunity to become partial owners in new and
+            fresh startups. As an employer, you get the chance to finally make your ideas come to life.
+          </p>
+        </div>
+      </div>
+      <div class="row no-gutters">
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url('static/img/bg-showcase-2.jpg');"></div>
+        <div class="col-lg-6 my-auto showcase-text">
+          <h2>Fast, efficient work flow.</h2>
+          <p class="lead mb-0">
+            With freeline's matching system, find projects that suit your expertise almost instantly, and get ensured secure fast payment
+            through our escrow partner.
+          </p>
+        </div>
+      </div>
+      <div class="row no-gutters">
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('static/img/bg2.jpg');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h2>Get started now.</h2>
+          <p class="lead mb-0">
+            There will be some sort of unique quote here that I will write. I cannot think of one yet. So the purpose of this long sentence is to fill space.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Testimonials -->
+  <section class="testimonials text-center bg-light">
+    <div class="container">
+      <h2 class="mb-5">Meet some of our top freelancers</h2>
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="{{url_for('static', filename='img/testimonials-1.jpg')}}" alt="">
+            <h5>Margaret E.</h5>
+            <p class="font-weight-light mb-0">IOS Developement</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="{{url_for('static', filename='img/testimonials-2.jpg')}}" alt="">
+            <h5>Fred S.</h5>
+            <p class="font-weight-light mb-0">Web Developement - Full Stack</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="{{url_for('static', filename='img/testimonials-3.jpg')}}" alt="">
+            <h5>Sarah W.</h5>
+            <p class="font-weight-light mb-0">UX/UI </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Call to Action -->
+  <section class="call-to-action text-white text-center">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-9 mx-auto">
+          <h2 class="mb-4">Subscribe to our newsletter!</h2>
+        </div>
+        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+          <form>
+            <div class="form-row">
+              <div class="col-12 col-md-9 mb-2 mb-md-0">
+                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
+              </div>
+              <div class="col-12 col-md-3">
+                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
+          <ul class="list-inline mb-2">
+            <li class="list-inline-item">
+              <a href="#">About</a>
+            </li>
+            <li class="list-inline-item">&sdot;</li>
+            <li class="list-inline-item">
+              <a href="#">Contact</a>
+            </li>
+            <li class="list-inline-item">&sdot;</li>
+            <li class="list-inline-item">
+              <a href="#">Terms of Use</a>
+            </li>
+            <li class="list-inline-item">&sdot;</li>
+            <li class="list-inline-item">
+              <a href="#">Privacy Policy</a>
+            </li>
+          </ul>
+          <p class="text-muted small mb-4 mb-lg-0">&copy; Freeline 2019. All Rights Reserved.</p>
+        </div>
+        <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
+          <ul class="list-inline mb-0">
+            <li class="list-inline-item mr-3">
+              <a href="#">
+                <i class="fab fa-facebook fa-2x fa-fw"></i>
+              </a>
+            </li>
+            <li class="list-inline-item mr-3">
+              <a href="#">
+                <i class="fab fa-twitter-square fa-2x fa-fw"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-instagram fa-2x fa-fw"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 
-  {% if current_user.is_authenticated %}
-  {% if current_user.employer() %}
-  <div class="jumbotron">
-    <h1 class="display-4">Welcome to Freeline.</h1>
-  <p class="lead">You're an {{ current_user.roles[0].name.lower() }} looking for freelancers and possibly future business partners.</p>
-    <hr class="my-4">
-  <p> Click the button below to get started.</p>
-  <a class="btn btn-primary btn-lg" href="{{ url_for('main.freelancers_available')}}" role="button">Available freelancers.</a>
-  {% elif current_user.freelancer() %}
-  <div class="jumbotron">
-    <h1 class="display-4">Welcome to Freeline.</h1>
-  <p class="lead">You're a frelancer looking for work and maybe some stake in a fresh startup.</p>
-    <hr class="my-4">
-  <p> Click the button below to get started.</p>
-  <a class="btn btn-primary btn-lg" href="{{ url_for('main.jobs_available')}}" role="button">Available jobs</a>
-  {% endif %}
-  {% else %}
-  <div class="jumbotron">
-    <h1 class="display-4">Welcome to Freeline.</h1>
-  <p class="lead">Login if you have an account to continue making progress.</p>
-    <hr class="my-4">
-  <p> If you haven't made an account yet, click the button below to get started.</p>
-  <a class="btn btn-primary btn-lg" href="{{ url_for('auth.start_registration')}}" role="button">Register</a>
-</div>
-
-{% endif %}
 {% endblock %}
